syntax = "proto3";

package hypervisor.v1;

option go_package = "hypervisor/api/gen/v1;v1";

import "common.proto";
import "compute.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

// ============================================================================
// Agent Service - Local instance operations on compute nodes
// This service is implemented by hypervisor-agent and called by hypervisor-server
// ============================================================================

service AgentService {
    // Instance lifecycle operations (called by server after scheduling)
    rpc CreateInstance(AgentCreateInstanceRequest) returns (Instance);
    rpc DeleteInstance(AgentDeleteInstanceRequest) returns (google.protobuf.Empty);

    // Instance state operations
    rpc StartInstance(AgentInstanceRequest) returns (Instance);
    rpc StopInstance(AgentStopInstanceRequest) returns (Instance);
    rpc RestartInstance(AgentRestartInstanceRequest) returns (Instance);

    // Instance queries
    rpc GetInstance(AgentInstanceRequest) returns (Instance);
    rpc ListInstances(google.protobuf.Empty) returns (AgentListInstancesResponse);

    // Instance monitoring
    rpc GetInstanceStats(AgentInstanceRequest) returns (InstanceStats);

    // Console access (bidirectional streaming)
    rpc AttachConsole(stream AgentConsoleInput) returns (stream AgentConsoleOutput);
}

// ============================================================================
// Request/Response Messages
// ============================================================================

// AgentCreateInstanceRequest is sent by server to agent to create an instance
message AgentCreateInstanceRequest {
    // Instance ID (pre-generated by server)
    string instance_id = 1;

    // Instance name
    string name = 2;

    // Instance type (vm, container, microvm)
    InstanceType type = 3;

    // Instance specification
    InstanceSpec spec = 4;

    // Labels and annotations
    map<string, string> labels = 5;
    map<string, string> annotations = 6;
}

// AgentDeleteInstanceRequest is sent by server to agent to delete an instance
message AgentDeleteInstanceRequest {
    string instance_id = 1;
    bool force = 2;
}

// AgentInstanceRequest is a simple request with just instance ID
message AgentInstanceRequest {
    string instance_id = 1;
}

// AgentStopInstanceRequest includes stop options
message AgentStopInstanceRequest {
    string instance_id = 1;
    bool force = 2;
    int32 timeout_seconds = 3;
}

// AgentRestartInstanceRequest includes restart options
message AgentRestartInstanceRequest {
    string instance_id = 1;
    bool force = 2;
}

// AgentListInstancesResponse contains all instances on this agent
message AgentListInstancesResponse {
    repeated Instance instances = 1;
}

// AgentConsoleInput is sent from client to agent for console input
message AgentConsoleInput {
    oneof input {
        bytes data = 1;
        AgentConsoleResize resize = 2;
    }
}

// AgentConsoleResize is sent when terminal size changes
message AgentConsoleResize {
    int32 width = 1;
    int32 height = 2;
}

// AgentConsoleOutput is sent from agent to client for console output
message AgentConsoleOutput {
    bytes data = 1;
}
